--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,21 +3,12 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 238, 238, 238;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --foreground-rgb: 242, 242, 242;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
+  background: hsl(0, 0, 95%) url('/background.jpg') center / cover no-repeat;
 }
 
 main {
