--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -29,6 +29,12 @@ main {
   font-size: 1.5em;
 }
 
+.material-icon-svg {
+  width: 100%;
+  height: 100%;
+  fill: currentColor;
+}
+
 /**
  * Box Model Dimensions
  *
