--- a/src/app/styles/footer.css
+++ b/src/app/styles/footer.css
@@ -73,15 +73,13 @@
 .footer-label-icon,
 .footer-label-container,
 .footer-label {
-  height: 1.65vh;
-  font-size: 1.65vh;
+  height: 1.9vh;
 }
 
 .force4k .footer-label-icon,
 .force4k .footer-label-container,
 .force4k .footer-label {
   height: 36px;
-  font-size: 36px;
 }
 
 .footer-label-container {
@@ -98,4 +96,14 @@
 
 .force4k .footer-label {
   font-size: 30px;
+}
+
+.footer-input-button {
+  width: 2.176vh;
+  height: 2.176vh;
+}
+
+.force4k .footer-input-button {
+  width: 47px;
+  height: 47px;
 }
