--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -3,20 +3,32 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 242, 242, 242;
+  --foreground-rgb: 242, 242, 242; /* should remove this */
+
+  --halo-white: #f4f4f4;
+  --halo-offwhite: #dedede;
 }
 
 body {
   font-size: 2vh; /* debug default */
   color: rgb(var(--foreground-rgb));
-  background: url('/background.jpg') center / cover no-repeat;
+  background: url('/background.jpg') center / cover no-repeat; /* debug default */
   background-color: hsl(0, 0%, 0%);
 }
 
+/* All the emotion css stuff renders on the client, so we need these styles
+   to bootstrap the the main layout el that contains all other components. */
 main {
-  /* debug */
-  background: url('/halo-infinite-wallpaper.jpg') center / cover no-repeat;
-  /* background: url('/debug-bg-02.jpg') center / cover no-repeat; */
+  flex-grow: 0;
+  flex-shrink: 0;
+  width: 100%;
+  height: 100%;
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  /* TODO: How to use nextjs optimization on this bg image? */
+  background: url("/multiplayer/play/play-bg.jpg") center / cover no-repeat;
+  /* This is the shadow for the canvas when in forced 4k mode. */
   box-shadow: 0 0 120px 30px hsla(0, 0%, 0%, 0.8);
 }
 
