style: restore the dope bg image

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -6,8 +6,6 @@
 */
 
 :root {
-  --foreground-rgb: 242, 242, 242; /* should remove this */
-
   --halo-white: #f4f4f4;
   --halo-offwhite: #dedede;
 }
@@ -28,8 +26,8 @@ body {
   width: 100%;
   height: 100%;
   font-size: 2vh; /* meaningless arbitrary default */
-  color: rgb(var(--foreground-rgb)); /* meaingingless arbitrary default */
-  background: url('/background.jpg') center / cover no-repeat; /* DEBUG (!) default */
+  color: var(--halo-white); /* meaingingless arbitrary default */
+  background: url('/background.jpg') center / cover no-repeat;
   background-color: hsl(0, 0%, 0%);
 }
 
@@ -44,8 +42,8 @@ main {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
   /* TODO: How to use nextjs optimization on this bg image? */
-  /* background: url("/multiplayer/play/play-bg.jpg") center / cover no-repeat; */
-  background: url("/debug-bg-02.jpg") center / cover no-repeat;
+  background: url("/multiplayer/play/play-bg.jpg") center / cover no-repeat;
+  /* background: url("/debug-bg-02.jpg") center / cover no-repeat; */
   /* This is the shadow for the canvas when in forced 4k mode. */
   box-shadow: 0 0 120px 30px hsla(0, 0%, 0%, 0.8);
 }
