--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -34,22 +34,25 @@ body {
 /* All the emotion css stuff renders on the client, so we need these styles
    to bootstrap the the main layout el that contains all other components. */
 main {
-  flex-grow: 0;
-  flex-shrink: 0;
   width: 100%;
   height: 100%;
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
   /* TODO: How to use nextjs optimization on this bg image? */
   background: url("/multiplayer/play/play-bg.jpg") center / cover no-repeat;
   /* background: url("/debug-bg-02.jpg") center / cover no-repeat; */
-  /* This is the shadow for the canvas when in forced 4k mode. */
-  box-shadow: 0 0 120px 30px hsla(0, 0%, 0%, 0.8);
 }
 
 a {
   outline: none;
+}
+
+.resize-container {
+  width: 100%;
+  height: 100%;
+  /* This is the shadow for the canvas when in forced 4k mode. */
+  box-shadow: 0 0 120px 30px hsla(0, 0%, 0%, 0.8);
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .truncate {
