--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -5,6 +5,8 @@
   Everything else is emotion css.
 */
 
+/* TODO: Optimize the bg images, use webp. */
+
 :root {
   --halo-white: #f4f4f4;
   --halo-offwhite: #dedede;
@@ -27,20 +29,17 @@ body {
   height: 100%;
   font-size: 2vh; /* meaningless arbitrary default */
   color: var(--halo-white); /* meaingingless arbitrary default */
-  background: url('/background.jpg') center / cover no-repeat; /* TODO: Optimize. */
-  background-color: hsl(0, 0%, 0%);
+  background: black;
   overflow: hidden; /* this was needed for mobile viewports to behave */
 }
 
-/* All the emotion css stuff renders on the client, so we need these styles
-   to bootstrap the the main layout el that contains all other components. */
-
-/* TODO: Optimize these, use webp. */
+body.force4k {
+  background-image: url('/background.jpg');
+}
 
 main {
   width: 100%;
   height: 100%;
-  background: url("/multiplayer/play/play-bg.jpg") center / cover no-repeat;
 }
 
 main.start-screen {
