--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -40,14 +40,15 @@ body.force4k {
 main {
   width: 100%;
   height: 100%;
+  background: black center / cover no-repeat;
 }
 
 main.start-screen {
-  background: url("/start-screen/bg.webp") center / cover no-repeat;
+  background-image: url("/start-screen/bg.webp");
 }
 
 main.tabbed-page-multiplayer-play {
-  background: url("/multiplayer/play/play-bg.jpg") center / cover no-repeat;
+  background-image: url("/multiplayer/play/play-bg.jpg");
 }
 
 a {
@@ -57,6 +58,7 @@ a {
 .resize-container {
   width: 100%;
   height: 100%;
+  background: black;
   /* This is the shadow for the canvas when in forced 4k mode. */
   box-shadow: 0 0 120px 30px hsla(0, 0%, 0%, 0.8);
   transition-property: transform;
